# c3pTemplate

./: .gitignore  CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h  README.md  abstract_plugin.h  inifile.cpp  inifile.h  plugin.h
